[package]
name = "rsproxy"
version = "0.1.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Cross-platform, multi-client TCP/UDP proxy"
homepage = "https://github.com/neosmart/rsproxy"
repository = "https://github.com/neosmart/rsproxy"
readme = "README.md"
keywords = ["proxy", "udp", "tcp", "networking"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"

[dependencies]
getopts = "0.2"
